# Fast-Drone-XI35

./: README.md
Docker/: container_init.sh
Docker/Dockerfile/: Dockerfile  Dockerfile.jetson  Dockerfile.jetson_base  Makefile  container_run.sh  docker_build.sh  update_jetson.sh
Docker/daemon/: nvargus-daemon
pnp/: CMakeLists.txt
shfiles/: csipx4.sh  record.sh  record_4_tuning.sh  record_csi_rs_imu.sh  rspx4.sh
src/auto_search/pnp/: package.xml
src/auto_search/search_plan/: CMakeLists.txt  package.xml
src/auto_search/search_plan/include/: search_plan_fsm.h
src/auto_search/search_plan/include/search_plan/: search_plan_fsm.h
src/auto_search/search_plan/launch/: search_plan.launch
src/auto_search/search_plan/src/: search_plan_fsm.cpp  search_plan_node.cpp
src/auto_search/search_plan/srv/: SearchService.srv
src/auto_search/target_merge/: CMakeLists.txt  package.xml
src/auto_search/target_merge/include/target_merge/: target_merge.h
src/auto_search/target_merge/launch/: target_merge.launch
src/auto_search/target_merge/msg/: TargetMerged_Message.msg
src/auto_search/target_merge/src/: target_merge.cpp  target_merge_node.cpp
src/planner/bspline_opt/: CMakeLists.txt  package.xml
src/planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/planner/bspline_opt/src/: bspline_optimizer.cpp
src/planner/drone_detect/: CMakeLists.txt  package.xml
src/planner/path_searching/: CMakeLists.txt  package.xml
src/planner/plan_env/: CMakeLists.txt  package.xml
src/planner/plan_env/include/plan_env/: grid_map.h
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  planner_manager.h
src/planner/plan_manage/launch/: advanced_param_exp.xml  advanced_param_exp_wallfollower.xml  advanced_param_wallfollower.xml  default.rviz  lio_drone_rviz.launch  single_run_in_exp.launch  single_run_in_exp_lio.launch  single_run_in_exp_wallfollower.launch  single_run_in_sim_wallfollower.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp
src/planner/wall_follower/: CMakeLists.txt  package.xml
src/planner/wall_follower/include/wall_follower/: wall_follower.h
src/planner/wall_follower/launch/: wallfollower_param.xml
src/planner/wall_follower/src/: wall_follower.cpp
src/realflight_modules/VINS-Fusion-gpu/camera_models/: CMakeLists.txt
src/realflight_modules/VINS-Fusion-gpu/config/: fast_drone_250.yaml  mono_downward.yaml  right.yaml  xi35_mono_downward.yaml
src/realflight_modules/VINS-Fusion-gpu/global_fusion/: CMakeLists.txt
src/realflight_modules/VINS-Fusion-gpu/loop_fusion/: CMakeLists.txt  package.xml
src/realflight_modules/VINS-Fusion-gpu/loop_fusion/src/: keyframe.h  parameters.h
src/realflight_modules/VINS-Fusion-gpu/vins_estimator/: CMakeLists.txt  package.xml
src/realflight_modules/VINS-Fusion-gpu/vins_estimator/launch/: fast_drone_250.launch  xi35_mono_downward.launch
src/realflight_modules/det-reg-pnp/cv_bridge_3416/: CMakeLists.txt  package.xml
src/realflight_modules/det-reg-pnp/detect_box_pnp/: CMakeLists.txt  package.xml
src/realflight_modules/det-reg-pnp/detect_box_pnp/include/detect_box_pnp/: bottom_camera.h
src/realflight_modules/det-reg-pnp/detect_box_pnp/launch/: detect_box_pnp.launch
src/realflight_modules/det-reg-pnp/detect_box_pnp/msg/: DetectInfo.msg
src/realflight_modules/det-reg-pnp/detect_box_pnp/src/: bottom_camera.cpp  detect_box_pnp_node.cpp
src/realflight_modules/det-reg-pnp/detect_box_pnp/srv/: ProcessImage.srv
src/realflight_modules/det-reg-pnp/detect_box_pnp/yaml/: camera_param.yaml
src/realflight_modules/det-reg-pnp/opencv3416_aruco_modified_install/lib/: libopencv_aruco.so.3.4  libopencv_aruco.so.3.4.16  libopencv_bgsegm.so.3.4  libopencv_bgsegm.so.3.4.16  libopencv_bioinspired.so.3.4  libopencv_bioinspired.so.3.4.16  libopencv_calib3d.so.3.4  libopencv_calib3d.so.3.4.16  libopencv_ccalib.so.3.4  libopencv_ccalib.so.3.4.16  libopencv_core.so.3.4  libopencv_cudaarithm.so.3.4  libopencv_cudabgsegm.so.3.4  libopencv_cudabgsegm.so.3.4.16  libopencv_cudacodec.so.3.4  libopencv_cudacodec.so.3.4.16  libopencv_cudafeatures2d.so.3.4  libopencv_cudafilters.so.3.4  libopencv_cudaimgproc.so.3.4  libopencv_cudalegacy.so.3.4  libopencv_cudalegacy.so.3.4.16  libopencv_cudaobjdetect.so.3.4  libopencv_cudaobjdetect.so.3.4.16  libopencv_cudaoptflow.so.3.4  libopencv_cudaoptflow.so.3.4.16  libopencv_cudastereo.so.3.4  libopencv_cudastereo.so.3.4.16  libopencv_cudawarping.so.3.4  libopencv_cudev.so.3.4  libopencv_cudev.so.3.4.16  libopencv_datasets.so.3.4  libopencv_datasets.so.3.4.16  libopencv_dnn.so.3.4  libopencv_dnn_objdetect.so.3.4  libopencv_dnn_objdetect.so.3.4.16  libopencv_dpm.so.3.4  libopencv_dpm.so.3.4.16  (+75 more)
src/realflight_modules/det-reg-pnp/target_recognition/: CMakeLists.txt  model.onnx  package.xml
src/realflight_modules/det-reg-pnp/target_recognition/launch/: target_recognition.launch
src/realflight_modules/det-reg-pnp/target_recognition/src/: target_recognition_node.py
src/realflight_modules/det-reg-pnp/target_recognition/srv/: ProcessImage.srv
src/realflight_modules/jetsoncsi-ros/jetson_csi_cam/: CMakeLists.txt  jetson_csi_cam.launch
src/realflight_modules/px4ctrl/config/: ctrl_param_fpv.yaml
src/realflight_modules/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  controller.cpp  controller.h  px4ctrl_node.cpp
src/realflight_modules/realsense-ros/realsense2_camera/: CMakeLists.txt
src/uav_simulator/local_sensing/: CMakeLists.txt
src/utils/cv_bridge_454/: CMakeLists.txt  package.xml
src/utils/drone_comm/src/lcm_receive/: CMakeLists.txt  package.xml
src/utils/drone_comm/src/lcm_receive/launch/: lcm_receive.launch
src/utils/drone_comm/src/lcm_receive/src/: lcm_receive_node.cpp
src/utils/drone_comm/src/lcm_receive/src/TargetInfoMergedlcm/: TargetInfoMerged.hpp
src/utils/drone_comm/src/lcm_send/: CMakeLists.txt  package.xml
src/utils/drone_comm/src/lcm_send/launch/: lcm_send.launch
src/utils/drone_comm/src/lcm_send/msg/: TargetMerged_Message.msg
src/utils/drone_comm/src/lcm_send/src/: lcm_send_node.cpp
(+28 files in other folders)
